--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,21 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="container  header__container">
+      </div>
+    </header>
+
+    <main class="main">
+
+    </main>
+
+    <footer class="footer">
+      <div class="footer__container  container">
+      </div>
+    </footer>
+  </div>
 
   <script src="js/script.min.js"></script>
 </body>
