--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
               </li>
             </ul>
 
-            <ul class="main-nav__list  site-list">
+            <ul class="main-nav__list  user-list">
               <li class="user-list__item">
                 <a href="#" class="button  user-list__button">Войти</a>
               </li>
