--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,75 @@
         </div>
       </section>
 
+      <section class="todo">
+        <div class="container">
+          <h2 class="todo__title">Таблица</h2>
+
+          <table class="todo__table">
+            <thead>
+              <tr>
+                <th>Понедельник</th>
+                <th>Вторник</th>
+                <th>Среда</th>
+                <th>Четверг</th>
+                <th>Пятница</th>
+                <th>Суббота</th>
+                <th>Воскресенье</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td colspan="3" class="bg-blue">
+                  <p class="todo-name">Бассейн</p>
+                  <p class="todo-time">9:30 - 10:30</p>
+                </td>
+                <td rowspan="2" class="bg-orange">
+                  <p class="todo-name">Отвезти маму</p>
+                  <p class="todo-time">9:30 - 11:30</p>
+                </td>
+                <td class="bg-blue">
+                  <p class="todo-name">Бассейн</p>
+                  <p class="todo-time">9:30 - 10:30</p>
+                </td>
+                <td rowspan="2" class="bg-green">
+                  <p class="todo-name">Гольф</p>
+                  <p class="todo-time">9:30 - 12:30</p>
+                </td>
+                <td rowspan="3" class="bg-orange">
+                  <p class="todo-name">Отдых</p>
+                  <p class="todo-time">9:30 - 13:00</p>
+                </td>
+              </tr>
+              <tr>
+                <td class="bg-orange">
+                  <p class="todo-name">Магазин</p>
+                  <p class="todo-time">11:00 - 12:00</p>
+                </td>
+                <td rowspan="2" class="bg-blue">
+                  <p class="todo-name">Съездить к Саше</p>
+                  <p class="todo-time">11:30 - 13:00</p>
+                </td>
+                <td rowspan="2" class="bg-green">
+                  <p class="todo-name">Уборка</p>
+                  <p class="todo-time">11:30 - 13:00</p>
+                </td>
+              </tr>
+              <tr>
+                <td class="bg-green">
+                  <p class="todo-name">Магазин</p>
+                  <p class="todo-time">12:00 - 13:00</p>
+                </td>
+                <td></td>
+                <td class="bg-green">
+                  <p class="todo-name">Отвезти Ольгу</p>
+                  <p class="todo-time">11:30 - 13:00</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
+
     </main>
 
     <footer class="footer">
