--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 
       <section class="reviews">
         <div class="container">
-          <h2 class="reviews__title">Отзывы о нас</h2>
+          <h2 class="reviews__title">Слайдер</h2>
 
           <div class="reviews__wrapper  swiper">
             <div class="reviews__content-wrapper">
@@ -164,6 +164,41 @@
               </tr>
             </tbody>
           </table>
+        </div>
+      </section>
+
+      <section class="section-article">
+        <div class="container">
+          <h2 class="section-article__title">Колонки</h2>
+
+          <article class="article">
+            <h3 class="article__title">Матч за звание чемпиона мира по шахматам 2016</h3>
+            <p class="article__text">Матч за звание чемпиона мира по шахматам 2016 (55-й в истории шахмат) проходил с 11 по 30 ноября 2016 года между действующим чемпионом мира Магнусом Карлсеном (Норвегия) и претендентом Сергеем Карякиным (Россия) в Нью-Йорке</p>
+            <p>Матч начался с семи ничьих подряд, прежде чем Карякин выиграл восьмую партию. Карлсен сравнял счёт, выиграв десятую партию. Все остальные партии были сыграны вничью, так что после первых 12 партий счёт был равным — 6:6, и судьба чемпионского титула была решена на тай-брейке. Первые 2 партии тай-брейка закончились вничью, а оставшиеся две партии выиграл Карлсен, сохранив в итоге звание чемпиона мира по шахматам.</p>
+
+            <section class="applicants">
+              <h3 class="applicants__header">Участники</h3>
+
+              <div class="applicants__member">
+                <h4 class="applicants__member-header">Действующий чемпион</h4>
+                <img src="./img/article/magnus.jpg" alt="Магнус Карлсен">
+                <p class="applicants__member-name">Магнус Карлсен</p>
+                <p class="applicants__mamber-text">26 лет</p>
+                <p class="applicants__mamber-text">Рейтинг на момент начала матча: 2853</p>
+              </div>
+
+              <div class="applicants__member">
+                <h4 class="applicants__member-header">Претендент</h4>
+                <img src="./img/article/karyakin.jpg" alt="Сергей Карякин">
+                <p class="applicants__member-name">Сергей Карякин</p>
+                <p class="applicants__mamber-text">26 лет</p>
+                <p class="applicants__mamber-text">Рейтинг на момент начала матча: 2772</p>
+              </div>
+            </section>
+
+            <p class="article__text">По правилам ФИДЕ действующий чемпион мира должен защищать свой титул в матче с победителем турнира претендентов. Магнус Карлсен впервые стал чемпионом мира по шахматам в 2013 году, выиграв в аналогичном мачте у Вишванатана Ананда. После этого он уже в качестве чемпиона мира в 2014 году вновь играл с Анандом, в котором опять одолел индийца.</p>
+            <p>Сергей Карякин стал претендентом на звание чемпиона мира по шахматам, выиграв турнир претендентов, проходивший с 10 по 28 марта 2016 года в Москве, где восемь лучших игроков играли в два круга. Карякин выиграл турнир набрав 8½ очков в 14 играх, опередив Фабиано Каруану и бывшего чемпиона мира Вишванатана Ананда, каждый из которых набрал по 7½ очков.</p>
+          </article>
         </div>
       </section>
 
