--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
           <button class="main-nav__toggle" type="button" aria-label="Переключатель отображения меню"><span></span></button>
 
-          <div class="main-nav__wrapper">
+          <div class="main-nav__inner">
             <ul class="main-nav__list  site-list">
               <li class="site-list__item">
                 <a class="site-list__link  site-list__link--active">Главная</a>
